# Cooling-with-heat

./: .gitignore  README.md  intro-research.ipynb  patents.ipynb  pyproject.toml  simulation-tools.ipynb
diffheat/: __init__.py  mesh.py  physics.py  solvers.py  utils.py  viz.py
diffheat/mesh/: __init__.py  boundary.py  grid1d.py  grid2d.py  grid3d.py
diffheat/operators/: __init__.py  divergence.py  gradient.py  laplacian.py
diffheat/physics/: __init__.py  heat1d.py
diffheat/solvers/: __init__.py  explicit.py  scan.py  stability.py
diffheat/viz/: __init__.py  canvas.py  controls.py  heatmap1d.py  heatmap2d.py  window.py
docs/: applications.md
docs/superpowers/plans/: 2026-06-24-diffheat-implementation.md  2026-06-25-diffheat-2d-implementation.md
docs/superpowers/specs/: 2026-06-24-diffheat-design.md  2026-06-25-diffheat-2d-design.md
examples/01-1d-heat-equation/: demo.py  explore.ipynb
examples/02-2d-heat-equation/: demo.py
tests/: conftest.py  test_boundary_1d.py  test_boundary_2d.py  test_boundary_3d.py  test_grid2d.py  test_grid3d.py  test_integration.py  test_mesh.py  test_operators.py  test_operators_3d.py  test_physics.py  test_solvers.py  test_solvers_1d.py  test_solvers_2d.py  test_solvers_3d.py  test_utils.py  test_viz.py
